// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files 1`] = `
Array [
  "employee-certification.form-group-fac.ts",
  "employee-certification.model.ts",
  "employee-certification.properties.ts",
  "employee-competency.form-group-fac.ts",
  "employee-competency.model.ts",
  "employee-competency.properties.ts",
  "employee-health-item.form-group-fac.ts",
  "employee-health-item.model.ts",
  "employee-health-item.properties.ts",
  "employee.form-group-fac.ts",
  "employee.model.ts",
  "employee.properties.ts",
  "index.ts",
]
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    lastName: new FormControl('', Validators.compose([Validators.required, Validators.maxLength(250)])),
    firstName: new FormControl('', Validators.compose([Validators.required, Validators.maxLength(250)])),
    birthDate: new FormControl(''),
    mobilePhone: new FormControl('', Validators.maxLength(25)),
    homePhone: new FormControl('', Validators.maxLength(25)),
    photo: new FormControl('', Validators.maxLength(4000)),
    email: new FormControl('', Validators.compose([Validators.required, Validators.maxLength(250)])),
    addressLine1: new FormControl('', Validators.maxLength(250)),
    addressLine2: new FormControl('', Validators.maxLength(250)),
    city: new FormControl('', Validators.maxLength(150)),
    state: new FormControl('', Validators.maxLength(2)),
    zip: new FormControl('', Validators.maxLength(10)),
    isEnabled: new FormControl('', Validators.required),
    hireDate: new FormControl('', Validators.required),
    fireDate: new FormControl(''),
    totalHoursOfService: new FormControl(''),
    certificationCount: new FormControl('', Validators.required),
    competencyCount: new FormControl('', Validators.required),
    healthItemCount: new FormControl('', Validators.required),
    employeeCertifications: new FormControl(''),
    employeeCompetencies: new FormControl(''),
    employeeHealthItems: new FormControl(''),
  });
};
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { IEmployeeCertification } from './employee-certification.model';
import { IEmployeeCompetency } from './employee-competency.model';
import { IEmployeeHealthItem } from './employee-health-item.model';

export interface IEmployee {
  id?: string;
  lastName?: string;
  firstName?: string;
  birthDate?: Date;
  mobilePhone?: string;
  homePhone?: string;
  photo?: string;
  email?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isEnabled?: boolean;
  hireDate?: Date;
  fireDate?: Date;
  totalHoursOfService?: number;
  certificationCount?: number;
  competencyCount?: number;
  healthItemCount?: number;
  employeeCertifications?: IEmployeeCertification[];
  employeeCompetencies?: IEmployeeCompetency[];
  employeeHealthItems?: IEmployeeHealthItem[];
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeProperties {
  ID = 'id',
  LAST_NAME = 'lastName',
  FIRST_NAME = 'firstName',
  BIRTH_DATE = 'birthDate',
  MOBILE_PHONE = 'mobilePhone',
  HOME_PHONE = 'homePhone',
  PHOTO = 'photo',
  EMAIL = 'email',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_ENABLED = 'isEnabled',
  HIRE_DATE = 'hireDate',
  FIRE_DATE = 'fireDate',
  TOTAL_HOURS_OF_SERVICE = 'totalHoursOfService',
  CERTIFICATION_COUNT = 'certificationCount',
  COMPETENCY_COUNT = 'competencyCount',
  HEALTH_ITEM_COUNT = 'healthItemCount',
  EMPLOYEE_CERTIFICATIONS = 'employeeCertifications',
  EMPLOYEE_COMPETENCIES = 'employeeCompetencies',
  EMPLOYEE_HEALTH_ITEMS = 'employeeHealthItems',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-certification.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeCertificationFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    employeeId: new FormControl(''),
    certificationId: new FormControl(''),
    certificationName: new FormControl(''),
    expiresOnUtc: new FormControl(''),
  });
};
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-certification.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IEmployeeCertification {
  id?: string;
  employeeId?: string;
  certificationId?: string;
  certificationName?: string;
  expiresOnUtc?: Date;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-certification.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeCertificationProperties {
  ID = 'id',
  EMPLOYEE_ID = 'employeeId',
  CERTIFICATION_ID = 'certificationId',
  CERTIFICATION_NAME = 'certificationName',
  EXPIRES_ON_UTC = 'expiresOnUtc',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-competency.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeCompetencyFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    employeeId: new FormControl(''),
    competencyId: new FormControl(''),
    competencyName: new FormControl(''),
    expiresOnUtc: new FormControl(''),
    isEnabled: new FormControl(''),
  });
};
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-competency.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IEmployeeCompetency {
  id?: string;
  employeeId?: string;
  competencyId?: string;
  competencyName?: string;
  expiresOnUtc?: Date;
  isEnabled?: boolean;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-competency.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeCompetencyProperties {
  ID = 'id',
  EMPLOYEE_ID = 'employeeId',
  COMPETENCY_ID = 'competencyId',
  COMPETENCY_NAME = 'competencyName',
  EXPIRES_ON_UTC = 'expiresOnUtc',
  IS_ENABLED = 'isEnabled',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-health-item.form-group-fac.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
import { FormControl, FormGroup, Validators } from '@angular/forms';

export function EmployeeHealthItemFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl(''),
    employeeId: new FormControl(''),
    healthItemId: new FormControl(''),
    healthItemName: new FormControl(''),
    expiresOnUtc: new FormControl(''),
    isEnabled: new FormControl(''),
  });
};
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-health-item.model.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export interface IEmployeeHealthItem {
  id?: string;
  employeeId?: string;
  healthItemId?: string;
  healthItemName?: string;
  expiresOnUtc?: Date;
  isEnabled?: boolean;
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: employee-health-item.properties.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum EmployeeHealthItemProperties {
  ID = 'id',
  EMPLOYEE_ID = 'employeeId',
  HEALTH_ITEM_ID = 'healthItemId',
  HEALTH_ITEM_NAME = 'healthItemName',
  EXPIRES_ON_UTC = 'expiresOnUtc',
  IS_ENABLED = 'isEnabled',
}
"
`;

exports[`File Based - Full Integration Tests NRSRx Employee OData Microservice should generate files: index.ts 1`] = `
"/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './employee-certification.form-group-fac';
export * from './employee-certification.model';
export * from './employee-certification.properties';
export * from './employee-competency.form-group-fac';
export * from './employee-competency.model';
export * from './employee-competency.properties';
export * from './employee-health-item.form-group-fac';
export * from './employee-health-item.model';
export * from './employee-health-item.properties';
export * from './employee.form-group-fac';
export * from './employee.model';
export * from './employee.properties';
"
`;
